# sxt-proof-of-sql-sdk

./: .gitignore  CHANGELOG.md  CLI-README.md  Cargo.toml  README.md  build.rs  package.json
.cargo/: config.toml
.github/workflows/: lint-and-test.yml  preview-release.yml  publish-cre-sdk.yml  release.yml
ci/: publish.sh
crates/: Cargo.toml
crates/proof-of-sql-sdk/: Cargo.toml
crates/proof-of-sql-sdk-local/: Cargo.toml
crates/proof-of-sql-sdk-local/src/: commitment_scheme.rs  lib.rs  proof_plan.rs  prover_query.rs  verify.rs
crates/proof-of-sql-sdk-wasm/: Cargo.toml
crates/proof-of-sql-sdk-wasm/src/: lib.rs
crates/proof-of-sql-sdk/examples/cli/: args.rs
crates/proof-of-sql-sdk/examples/count-ethereum-core/: main.rs
crates/proof-of-sql-sdk/examples/produce-plan/: args.rs  main.rs
crates/proof-of-sql-sdk/src/: client.rs  lib.rs  plan.rs  substrate.rs
crates/sxt-posql-cli/: Cargo.toml
crates/sxt-posql-cli/src/: args.rs  main.rs  query_and_verify.rs
crates/sxt-proof-of-sql-cre-plugins/: Cargo.toml
crates/sxt-proof-of-sql-cre-plugins/src/: lib.rs
crates/sxt-proof-of-sql-sdk/: Cargo.toml
crates/sxt-proof-of-sql-sdk/examples/chainlink/: README.md  source.js
crates/sxt-proof-of-sql-sdk/examples/deno/: README.md
crates/sxt-proof-of-sql-sdk/src/: main.rs  produce_plan_subcommand.rs
crates/sxt-proof-of-sql-sdk/src/base/: attestation.rs  commitment_scheme.rs  javascript_friendly_types.rs  verify.rs  zk_query_models.rs
crates/sxt-proof-of-sql-sdk/src/base/serde/: hex.rs  javascript_serializations.rs  mod.rs  verifying_configuration.rs
crates/sxt-proof-of-sql-sdk/src/native/: auth.rs  plan.rs
crates/sxt-proof-of-sql-sdk/src/trustless_planning/: mod.rs  prover_query.rs
crates/sxt-proof-of-sql-sdk/src/wasm/: mod.rs
cre-examples/: package-lock.json  package.json  secrets.yaml  tsconfig.json
cre-examples/posql-demo-http/: README.md
cre-examples/posql-demo-http/posql-demo/: project.yaml
cre-examples/posql-demo-http/posql-demo/http/: Makefile  main.ts  package.json  tsconfig.json  workflow.yaml
cre-examples/retrieve-access-token/: config.json  index.ts  workflow.yaml
cre-examples/simple-verify/: Makefile  config.json  index.ts  package-lock.json  package.json  project.yaml
cre-examples/simple-verify/simple-verify/: Makefile  index.ts  workflow.yaml
cre-examples/simple-verify/wasm/: workflow.js  workflow.wasm
cre-examples/verify-via-http-e2e/: README.md
cre-examples/verify-via-http-e2e/trigger/: index.js  package-lock.json  package.json
cre-examples/verify-via-http-e2e/workflow/verify-via-http/: Makefile  package-lock.json  package.json  workflow.yaml
examples/count-ethereum-core/: main.rs
examples/cre/: index.js  package-lock.json  package.json
examples/deno/: query.js
examples/node/: README.md  query.js
examples/produce-plan/: args.rs  main.rs
keys/: mainnet.pub  testnet.pub
node/src/: build_index.sh  index_tail.js  package.json
scripts/: get-plan.sh
src/: args.rs  lib.rs  main.rs  produce_plan_subcommand.rs  query_and_verify.rs
src/base/: README.md  attestation.rs  commitment_scheme.rs  javascript_friendly_types.rs  mod.rs  proof_plan.rs  prover.rs  prover_query.rs  substrate_query.rs  uppercase_accessor.rs  verifiable_commitment.rs  verify.rs  zk_query_models.rs
src/base/proto/: prover.proto
src/base/serde/: hex.rs  javascript_serializations.rs  js_friendly_table.rs  mod.rs  param.rs  result_table_to_json.rs
src/base/test_assets/: valid_gateway_response.json
src/base/zk_query_api/: mod.rs  models.rs  zk_query_client.rs
src/native/: client.rs  commitment.rs  dory_commitment_scheme.rs  dyn_owned_table.rs  mod.rs  plan.rs  rpc.rs  substrate.rs  zk_query_client.rs
src/trustless_planning/: mod.rs  proof_plan.rs  prover_query.rs
src/wasm/: README.md  mod.rs
sxt-proof-of-sql-cre-sdk-typescript/: .npmignore  Makefile  package-lock.json  package.json  tsconfig.json
sxt-proof-of-sql-cre-sdk-typescript/src/: index.ts
sxt-proof-of-sql-cre-sdk-typescript/src/confidential-zk-query-client/: confidential-zk-query-client.ts  zk-query-client-config.ts
sxt-proof-of-sql-cre-sdk-typescript/src/proof-of-sql-result-schema/: proof-of-sql-result-schema.test.ts  proof-of-sql-result-schema.ts
test_assets/: javascript_friendly_failures.json  javascript_friendly_success.json
ts-proof-of-sql-sdk/: package-lock.json  package.json
ts-proof-of-sql-sdk/src/: index.ts
