[package]
name = "sxt-proof-of-sql-sdk-local"
edition.workspace = true
repository.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
ark-serialize = { workspace = true }
bincode = { workspace = true, default-features = false, features = ["serde", "alloc"] }
bumpalo = { workspace = true }
clap = { workspace = true }
datafusion = { workspace = true }
nova-snark = { workspace = true, default-features = false }
proof-of-sql = { workspace = true }
proof-of-sql-planner = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, features = ["codegen", "prost"] }
serde = { workspace = true }
snafu = { workspace = true }
sqlparser = { workspace = true }
subxt = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
rand = { workspace = true }
bumpalo = { version = "3.11.0" }
ark-std = { version = "0.5.0", default-features = false }

[features]
default = ["native", "prover-client"]
prover-client = ["tonic/transport"]
native = ["subxt/native"]
web = ["subxt/web"]
