[package]
name = "sxt-proof-of-sql-sdk"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }

[dependencies]
bincode = { workspace = true, default-features = false, features = ["serde", "alloc"] }
bumpalo = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenv = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
indexmap.workspace = true
proof-of-sql = { workspace = true, features = ["std"] }
proof-of-sql-planner = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
sqlparser = { workspace = true, features = ["visitor", "std"] }
subxt = { workspace = true, features = ["jsonrpsee"] }
sxt-proof-of-sql-sdk-local = { workspace = true, features = ["native", "prover-client"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
snafu = { workspace = true }
itertools = { workspace = true }

[[example]]
name = "count-ethereum-core"
path = "examples/count-ethereum-core/main.rs"
