[package]
name = "sxt-posql-sdk"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
dotenv = { workspace = true }
subxt = { workspace = true, features = ["jsonrpsee"] }
sxt-proof-of-sql-sdk = { workspace = true }
sxt-proof-of-sql-sdk-local = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
